Fix splitter z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@
     height: 24px;
     background: color-mix(in oklab, var(--background-primary) 90%, var(--text-normal) 10%);
     cursor: row-resize;
-    z-index: 1;
     transition: background-color 0.1s;
 }
 
